@@ -19,7 +19,7 @@ specialization = 2/3, npoints = 20, alpha = 0.05/20)
         stop("number of groups must be 2")
     glabel <- as.character(unique(groups))
     if (is.null(colnames(comm)))
-        colnames(comm) <- paste("Species", 1:nrow(comm), sep=".")
+        colnames(comm) <- paste("Species", 1:ncol(comm), sep=".")
     if (any(colSums(comm) <= 0))
         stop("'comm' contains zero sum columns")
     spp <- colnames(comm)
@@ -73,14 +73,28 @@ specialization = 2/3, npoints = 20, alpha = 0.05/20)
     ## finding Xmin and Ymin values for Xseq and Yseq
     Xmins <- sapply(Yseq, function(z) rootfun(z, C1, C2, n, m, upper=max(X)))
     Ymins <- sapply(Xseq, function(z) rootfun(z, C2, C1, m, n, upper=max(Y)))
+
+    ## needed to tweak original set of rules (extreme case reported
+    ## by Richard Telford failed here)
+    if (all(is.na(Xmins)))
+        Xmins[1] <- 1
+    if (all(is.na(Ymins)))
+        Ymins[1] <- 1
+
     minval <- list(data.frame(x=Xseq[!is.na(Ymins)], y=Ymins[!is.na(Ymins)]),
         data.frame(x=Xmins[!is.na(Xmins)], y=Yseq[!is.na(Xmins)]))
+
     ## shared but too rare
     Ymin <- Ymins[1]
     Xmin <- Xmins[1]
     sr <- X < Xmin & Y < Ymin
-    tmp1 <- approx(c(Xmin, 1), c(1, Ymin), xout=1:Xmin)
-    tmp2 <- approx(c(1, Ymin), c(Xmin, 1), xout=1:Ymin)
+
+    ## consequence of manually setting Xmin/Ymin resolved here
+    tmp1 <- if (Xmin==1)
+        list(x=1, y=Xmin) else approx(c(Xmin, 1), c(1, Ymin), xout=1:Xmin)
+    tmp2 <- if (Ymin==1)
+        list(x=1, y=Ymin) else approx(c(1, Ymin), c(Xmin, 1), xout=1:Ymin)
+
     for (i in 1:S) {
         if (X[i] %in% tmp1$x)
             sr[i] <- Y[i] < tmp1$y[which(X[i]==tmp1$x)]
