@@ -4,6 +4,8 @@ VEGAN RELEASE VERSIONS at http://cran.r-project.org/
 
 Version 2.0-6 (opened October 8, 2012)
 
+	* merge 2369: clamtest fix and border cases.
+	* merge 2367: rectify mantel, summary.anosim print.
 	* merge 2362: doc on r2357 for capscale.
 	* merge 2361: adjust imaginary axes similarly as real eigenvalue. 
 	* merge 2357: print additive constant in capscale.
